--- a/nodejs/views/home.ejs
+++ b/nodejs/views/home.ejs
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-</head>
+
+<%-include('./partials/head.ejs')%>
 <body>
     <h1>This is a home page</h1>
     <a href="./about">about</a>
+    <% if(posts.length>0){ %>
+        <%posts.forEach(post=>{%>
+            <h1><%=post.title%></h1>
+            <p><%=post.date%></p>
+            <p><%=post.content%></p>
+        <%})%>
+    <% } %>
 </body>
 </html>
